[gd_scene load_steps=12 format=3 uid="uid://b3ghxetcov6va"]

[ext_resource type="Script" uid="uid://1eg24s10xjnm" path="res://scripts/Characters/enemy_base.gd" id="1_vv3x1"]
[ext_resource type="Material" uid="uid://cv7l0r86mk435" path="res://assets/hitflash_mat.tres" id="2_lxe82"]
[ext_resource type="Script" uid="uid://v8gickpnd8q0" path="res://scripts/components/health_component.gd" id="3_xuskm"]
[ext_resource type="Script" uid="uid://cgpmhci7164s6" path="res://scripts/components/hitbox_component.gd" id="4_3ysdf"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4me14"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t01qn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tmg5w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tdqxq"]

[sub_resource type="NavigationMesh" id="NavigationMesh_p67kr"]
vertices = PackedVector3Array(-49.5, 0.5, -49.5, -49.5, 0.5, 49.5, 49.5, 0.5, 49.5, 49.5, 0.5, -49.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p67kr"]
albedo_color = Color(0.807843, 0.494118, 0.47451, 0.266667)

[sub_resource type="PlaneMesh" id="PlaneMesh_2p2xa"]
material = SubResource("StandardMaterial3D_p67kr")

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource("1_vv3x1")
max_health = 20.0
hitflash_material = ExtResource("2_lxe82")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_overlay = ExtResource("2_lxe82")
mesh = SubResource("CapsuleMesh_4me14")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_t01qn")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_xuskm")

[node name="HitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("4_3ysdf")
shape = SubResource("CapsuleShape3D_tmg5w")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_tdqxq")

[node name="PathfindTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
visible = false
navigation_mesh = SubResource("NavigationMesh_p67kr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(50, 0, 0, 0, 10, 0, 0, 0, 50, 0, 0, 0)
mesh = SubResource("PlaneMesh_2p2xa")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 10.0

[connection signal="timeout" from="PathfindTimer" to="." method="_on_pathfind_timer_timeout"]
